# xgcs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONNECTION_FIX.md  DOCKER_AUTO_SPINUP.md  DOCKER_README.md  IMPLEMENTATION_STATUS.md  PORT_MAPPING_FIX.md  QGC_FEATURE_INTEGRATION_PLAN.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_STARTUP.md  SCRIPTS_README.md  SIMPLE_SETUP.md  SIMULATION_README.md  STARTUP_GUIDE.md  XGCS_ARCHITECTURE_PLAN.md  build_sitl_docker.sh  docker-compose-simple.yml  docker-compose.yml  fix-git-secrets.sh  hallucinations_log.md  mini-proxy.js  package-lock.json  package.json  proxy-server.js  quick-fix.sh  run-simple.sh  simulations.json  start.sh  stop.sh  test_compilation.js  test_fixes.js
client/: config-overrides.js  console-export-2025-2-17_13-53-7.txt  console-export-2025-2-17_14-4-59.txt  package-lock.json  package.json  webpack.config.js
client/public/: index.html
client/public/cesium/Workers/: chunk-3DLZAS7T.js  chunk-4RP6ACF6.js  chunk-A4R6HP5H.js  chunk-BC3RBQRQ.js  chunk-D32DZSEC.js  chunk-DG7B7W65.js  chunk-DLCTHPIV.js  chunk-E25VRLIZ.js  chunk-E2NX4UJ2.js  chunk-FMJWH3RL.js  chunk-FSU6RZ6S.js  chunk-HZQ2LRMY.js  chunk-I2ICH2LD.js  chunk-IIT3SHXK.js  chunk-JPOF5MJM.js  chunk-NOHRD3OR.js  chunk-OWZATOOT.js  chunk-R6YRFJ3K.js  chunk-REP6L7BH.js  chunk-SOSKHJVT.js  chunk-TTK4OD75.js  chunk-VSCNOKDU.js  chunk-WV3AQKZG.js  createBoxGeometry.js  createBoxOutlineGeometry.js  createCircleGeometry.js  createCoplanarPolygonGeometry.js  createCorridorOutlineGeometry.js.LICENSE.txt  createCylinderGeometry.js  createCylinderOutlineGeometry.js  createEllipseGeometry.js  createEllipseOutlineGeometry.js  createEllipsoidGeometry.js  createEllipsoidOutlineGeometry.js  createFrustumOutlineGeometry.js  (+15 more)
client/src/: App.jsx  index.jsx  setupProxy.js
client/src/components/: FleetSidebar.jsx  FlightInstruments.jsx  FlightMap.jsx  FlightMapHooks.js  FlightModeSelector.jsx  FollowMeToggle.jsx  InstrumentPanel.jsx  MapContextMenu.jsx  TopBar.jsx  VehicleModal.jsx  VehicleSelector.jsx  VideoPanel.jsx
client/src/context/: ThemeContext.jsx  VehicleContext.jsx
client/src/pages/: Analysis.jsx  DebriefPage.jsx  FirmwareUpdate.jsx  FlightDisplay.jsx  HomePage.jsx  MavlinkSender.jsx  MissionPlanning.jsx  Parameters.jsx  SensorCalibration.jsx  Settings.jsx  Simulation.jsx  TemplatePage.jsx  TuningPage.jsx  VehicleConnections.jsx
client/src/styles/: App.css  HomePage.css  Settings.css  TemplatePage.css  TopBar.css  VehicleConnections.css  VehicleModal.css  index.css
client/src/utils/: ArduPilotBootloader.js  CorridorScan.js  StructureScan.js  SurveyPattern.js  telemetry-client.js
docs/: ARCHITECTURE.md  DEVELOPMENT.md  USER_GUIDE.md
docs/archive/: ARDUPILOT_SITL_SETUP_COMPLETE.md  SIMULATION_TROUBLESHOOTING.md
public/icons/: README.md
public/models/: README.md
scripts/: build_cpp_backend.sh  build_sitl_docker.sh  simulate_video.sh  start.sh  start_stable.sh  stop.sh  test_arm_disarm.sh
server/: CMakeLists.txt  Dockerfile  package-lock.json  package.json  simulations.json
server/include/: ardupilot_rally.hpp  connection_manager.hpp  fix_boost_asio.h  log_file_manager.hpp  tlog_recorder.hpp  vehicle_connection.hpp  video_manager.hpp
server/src/: connection_manager.cpp  log_file_manager.cpp  main.cpp  mavlink_streamer.cpp  mavlink_streamer.h  server.js  tlog_recorder.cpp  vehicle_connection.cpp  video_manager.cpp
server/src/api/: routes.hpp
server/src/routes/: connection.js  mission.js  simulation.js  simulation_docker.js  simulation_fallback.js  simulation_mock.js  storage.js  vehicle.js
server/src/services/: MissionService.js
src/components/: VideoPlayer.jsx
(+15 files in other folders)
